202111061
Correction bug transpondeur DATV

202111060
Ajout DVB-S2 transpondeur (Forward) (Avec RTL en RX et Lime en TX)

202111011
Ajout SR 92 en TX

202111010
Amélioration détection perte verrouillage DVB-S2

202110300
Activation du mode audio off
Changement formats webcam c525 (C170)

202110270
Modifications paramètres RX leandvb

202110080
Ajout Streaming F5ZBC

202108230
Allow system update release info change

202107020
Correct DVB-T Frequency Calculation

202105310
RX Sarsat activation/désactivation CRC NULL (Balise F1LVT Checksum à 0)

202105140
Suppression RX 8PSK car detection auto avec leandvb

202104290
Add LimeSDR USB to Band Viewer
Band Viewer Enhancements

202104130
Add Lime Band Viewer

202102160
New builds based on Raspios 2021-01-11
Update Limesuite Version to 20.10
Tidy LimeFPGA builds
Display Required TS Bitrate on Info Screen
Improve Jetson HDMI video quality
Initial LimeSDR Mini DVB-T capability

202001170
Correction buffer RX avec lime

202101160
Filtre RRC leandvb
Tempo PTT lime de 8s à 10s

202101091
Restauration format vidéo

202012010
Ajout entrée HDMI Usb (expérimental)

202011210
Correction problème détection carte son si rpi en FR

202011010
Désactivation Bluetooth

202010310
Modification tempo kill fbi

202010010
New builds based on Raspios 2020-08-20
Increase Lime PTT Delay to 8 seconds
Allow H264 PiCam 16:9
Continue to display RX params with no signal

202009170
Changement nom Argos en Sarsat
Sarsat: affichage de la trame dès décodage
Sarsat: affichage des CRC

202009040
RX Minitiouner réglage séparé scan satellite et terrestre

202009020
Correction transpondeur leandvb avec limesdr

202008260
Correction réinitialisation RTLSDR RX Leandvb

202008200
Détection clé RTL RX Argos
Différence entre Début et fin automatique 100KHz Argos

202008170
Ajout décodage balise détresse 406 de F4EHY

202007310
Add support for B910 WebCam ID 046d:0823

202007240
Load new Waveshare 35a overlay
Re-enable dist-upgrade

202007230